# Learnify_Dapp

./: Cargo.toml  README.md  README.mdgit  dfx.json  package-lock.json  package.json  tsconfig.json
src/Learnify_Dapp_backend/: Cargo.toml
src/Learnify_Dapp_frontend/: index.html  package.json  postcss.config.js  vite.config.js
src/Learnify_Dapp_frontend/src/: App.jsx  index.scss
src/Learnify_Dapp_frontend/src/components/: Achievements.jsx  Analytics.jsx  Badges.jsx  CallToAction.jsx  Community.jsx  Dashboard.jsx  Features.jsx  Footer.jsx  HowItWorks.jsx  ICPLearningWheel.jsx  LandingPage.jsx  Learning.jsx  LearnyFi.jsx  Overview.jsx  Settings.jsx  Sidebar.jsx  Staking.jsx  StreakCalendar.jsx  Wallet.jsx  WalletConnect.jsx  WalletDropdown.jsx  YourComponent.jsx
src/learnify_dapp_backend/: Cargo.toml  learnify_dapp_backend.did
src/learnify_dapp_backend/src/: lib.rs
